--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="pos-line">    <!--чтобы расположить карточки друг за другом по горизонтали-->
                 <div class="position">
                     <div class="pos-image">
-                        <img class="pos-img" src="../Web-технологии/herbal.jpeg">
+                        <img class="pos-img" src="./herbal.jpeg">
                     </div>
                     <div class="pos-text">
                         Травяной
