--- a/2.html
+++ b/2.html
@@ -11,14 +11,14 @@
         <div class="container">
             <div class="line">
                 <div class="logo">
-                    <img src="../Web-технологии/лого1.jpeg">
+                    <img src="./лого1.jpeg">
                 </div>
 
                 <div class="navi">
-                    <a class="navi-item1" href="../Web-технологии/2.html">Разглядеть меню</a>
-                    <a class="navi-item" href="../Web-технологии/3.html">Сделать заказ</a>
-                    <a class="navi-item" href="../Web-технологии/index.html">Главная</a>
-                    <a class="navi-item" href="../Web-технологии/4.html">О чайной</a>
+                    <a class="navi-item1" href="./2.html">Разглядеть меню</a>
+                    <a class="navi-item" href="./3.html">Сделать заказ</a>
+                    <a class="navi-item" href="./index.html">Главная</a>
+                    <a class="navi-item" href="./4.html">О чайной</a>
                     <a class="navi-item" href="2.html#b">Чай</a>
                     <a class="navi-item" href="2.html#c">Кофе</a>
                     <a class="navi-item" href="2.html#d">Сладкое</a>
@@ -26,7 +26,7 @@
 
                 <div class="icon1">
                     <a href="index.html#a">
-                        <img src="../Web-технологии/icon0.png" alt="">       <!--первая иконка-->
+                        <img src="./icon0.png" alt="">       <!--первая иконка-->
                     </a>
                 </div>
             </div>
@@ -48,7 +48,7 @@
             <div class="sec-line">    <!--чтобы расположить карточки друг за другом по горизонтали-->
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/herbal.jpeg">
+                        <img class="sec-img" src="./herbal.jpeg">
                     </div>
                     <div class="sec-text">
                         Травяной
@@ -57,7 +57,7 @@
 
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/alice.jpeg">
+                        <img class="sec-img" src="./alice.jpeg">
                     </div>
                     <div class="sec-text">
                         "Алиса"
@@ -66,7 +66,7 @@
 
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/lavender.jpeg">
+                        <img class="sec-img" src="./lavender.jpeg">
                     </div>
                     <div class="sec-text">
                         Лавандовый
@@ -75,7 +75,7 @@
 
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/cherry.jpeg">
+                        <img class="sec-img" src="./cherry.jpeg">
                     </div>
                     <div class="sec-text">
                         Вишневый
@@ -99,7 +99,7 @@
             <div class="sec-line">    <!--чтобы расположить карточки друг за другом по горизонтали-->
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/dalgona coffee.jpeg">
+                        <img class="sec-img" src="./dalgona coffee.jpeg">
                     </div>
                     <div class="sec-text">
                         Дальгона
@@ -108,7 +108,7 @@
 
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/toff.jpeg">
+                        <img class="sec-img" src="./toff.jpeg">
                     </div>
                     <div class="sec-text">
                         Toffee
@@ -117,7 +117,7 @@
 
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/pepper.jpeg">
+                        <img class="sec-img" src="./pepper.jpeg">
                     </div>
                     <div class="sec-text">
                         Пепперминт
@@ -126,7 +126,7 @@
 
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/glace.jpeg">
+                        <img class="sec-img" src="./glace.jpeg">
                     </div>
                     <div class="sec-text">
                         Глясе
@@ -150,7 +150,7 @@
             <div class="sec-line">    <!--чтобы расположить карточки друг за другом по горизонтали-->
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/lemon.jpeg">
+                        <img class="sec-img" src="./lemon.jpeg">
                     </div>
                     <div class="sec-text">
                         Лимонник
@@ -159,7 +159,7 @@
 
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/cupcake.jpeg">
+                        <img class="sec-img" src="./cupcake.jpeg">
                     </div>
                     <div class="sec-text">
                         Кекс
@@ -168,7 +168,7 @@
 
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/apple pie.jpeg">
+                        <img class="sec-img" src="./apple pie.jpeg">
                     </div>
                     <div class="sec-text">
                         Яблочный пирог
@@ -177,7 +177,7 @@
 
                 <div class="section">
                     <div class="sec-image">
-                        <img class="sec-img" src="../Web-технологии/chocolate cake.jpeg">
+                        <img class="sec-img" src="./chocolate cake.jpeg">
                     </div>
                     <div class="sec-text">
                         Шоколадный торт
