--- a/4.html
+++ b/4.html
@@ -10,19 +10,19 @@
         <div class="container">
             <div class="line">
                 <div class="logo">
-                    <img src="../Web-технологии/лого1.jpeg">
+                    <img src="./лого1.jpeg">
                 </div>
 
                 <div class="navi">
-                    <a class="navi-item" href="../Web-технологии/2.html">Разглядеть меню</a>
-                    <a class="navi-item" href="../Web-технологии/3.html">Сделать заказ</a>
-                    <a class="navi-item" href="../Web-технологии/index.html">Главная</a>
-                    <a class="navi-item1" href="../Web-технологии/4.html">О чайной</a>
+                    <a class="navi-item" href="./2.html">Разглядеть меню</a>
+                    <a class="navi-item" href="./3.html">Сделать заказ</a>
+                    <a class="navi-item" href="./index.html">Главная</a>
+                    <a class="navi-item1" href="./4.html">О чайной</a>
                 </div>
 
                 <div class="icon1">
                     <a href="index.html#a">
-                        <img src="../Web-технологии/icon0.png" alt="">       <!--первая иконка-->
+                        <img src="./icon0.png" alt="">       <!--первая иконка-->
                     </a>
                 </div>
             </div>
