--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
         <div class="container">
             <div class="line">
                 <div class="logo">
-                    <img src="../Web-технологии/лого1.jpeg">
+                    <img src="./лого1.jpeg">
                 </div>
 
                 <div class="navi">
-                    <a class="navi-item" href="../Web-технологии/2.html">Разглядеть меню</a>
-                    <a class="navi-item" href="../Web-технологии/3.html">Сделать заказ</a>
-                    <a class="navi-item1" href="../Web-технологии/index.html">Главная</a>
-                    <a class="navi-item" href="../Web-технологии/4.html">О чайной</a>
+                    <a class="navi-item" href="./2.html">Разглядеть меню</a>
+                    <a class="navi-item" href="./3.html">Сделать заказ</a>
+                    <a class="navi-item1" href="./index.html">Главная</a>
+                    <a class="navi-item" href="./4.html">О чайной</a>
                 </div>
 
                 <div class="icon1">
                     <a href="index.html#a">
-                        <img src="../Web-технологии/icon0.png" alt="">       <!--первая иконка-->
+                        <img src="./icon0.png" alt="">       <!--первая иконка-->
                     </a>
                 </div>
             </div>
@@ -47,7 +47,7 @@
 
                 <div class="position">
                     <div class="pos-image">
-                        <img class="pos-img" src="../Web-технологии/lavender.jpeg">
+                        <img class="pos-img" src="./lavender.jpeg">
                     </div>
                     <div class="pos-text">
                         Лавандовый
@@ -56,7 +56,7 @@
 
                 <div class="position">
                     <div class="pos-image">
-                        <img class="pos-img" src="../Web-технологии/alice.jpeg">
+                        <img class="pos-img" src="./alice.jpeg">
                     </div>
                     <div class="pos-text">
                         "Алиса"
@@ -79,7 +79,7 @@
                     </div>
                     <div class="contact2">
                         <a href="https://t.me/+gEnJpJm7VpNhMGYy" target="_blank">
-                            <img src="../Web-технологии/tele.png">
+                            <img src="./tele.png">
                         </a>
                     </div>
                 </div>
