--- a/3.html
+++ b/3.html
@@ -28,7 +28,7 @@
             </div>
 
 
-        <form action="www.bing.com" id="UserEnter" name="UserEnter" target="_blank">
+        <form action="./5.html" id="UserEnter" name="UserEnter" target="_blank">
             <p>
                 <input type="text" placeholder="Введите имя">
             </p>
