--- a/3.html
+++ b/3.html
@@ -28,7 +28,8 @@
             </div>
 
 
-        <form action="./5.html" id="UserEnter" name="UserEnter" target="_blank">
+        <form action="www/bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
+            <p>Для поисковика:<input type="Text"  name="q" value="search"></p>
             <p>
                 <input type="text" placeholder="Введите имя">
             </p>
@@ -45,7 +46,9 @@
                 <input type="tel" placeholder="+7(000)000-00-00">
             </p>
             <p>
-                <input type="submit">
+                <input type="Reset"  name="Reset"  value="Обновить">
+                <input type="Submit" name="submit"  value="Отправить">
+            </p>
         </form>
 
         </div>
