--- a/3.html
+++ b/3.html
@@ -28,7 +28,7 @@
             </div>
 
 
-        <form action="www/bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
+        <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
             <p>Для поисковика:<input type="Text"  name="q" value="search"></p>
             <p>
                 <input type="text" placeholder="Введите имя">
@@ -45,6 +45,8 @@
             <p>
                 <input type="tel" placeholder="+7(000)000-00-00">
             </p>
+            <input type="hidden" name="function"  value="page">
+            <input type="hidden" name="page_id"  value="3">
             <p>
                 <input type="Reset"  name="Reset"  value="Обновить">
                 <input type="Submit" name="submit"  value="Отправить">
